--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,14 @@
       <version>${spring.surf.version}</version>
       <scope>provided</scope>
     </dependency>
+	<!-- Gson: Java to Json conversion -->
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>1.4</version>
+		<scope>compile</scope>
+	</dependency>
+    
   </dependencies>
   <build>
     <pluginManagement>
@@ -133,6 +141,15 @@
 	    </archive>
 	  </configuration>
 	</plugin>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
             </plugins>
     </pluginManagement>
   </build>
