--- a/fme-alfresco-extdl-repo/pom.xml
+++ b/fme-alfresco-extdl-repo/pom.xml
@@ -3,10 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>fme-alfresco-extdl-parent</artifactId>
-    <groupId>de.fme</groupId>
+    <groupId>se.capio.stg.alfresco</groupId>
     <version>1.1</version>
   </parent>
-  <groupId>de.fme</groupId>
+  <groupId>se.capio.stg.alfresco</groupId>
   <artifactId>fme-alfresco-extdl-repo</artifactId>
   <version>1.2</version>
   <packaging>jar</packaging>
