--- a/fme-alfresco-extdl-repo/pom.xml
+++ b/fme-alfresco-extdl-repo/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>fme-alfresco-extdl-parent</artifactId>
-    <groupId>se.capio.stg.alfresco</groupId>
-    <version>1.1</version>
+    <groupId>de.fme</groupId>
+    <version>pre-4.2</version>
   </parent>
-  <groupId>se.capio.stg.alfresco</groupId>
+  <groupId>de.fme</groupId>
   <artifactId>fme-alfresco-extdl-repo</artifactId>
-  <version>1.2</version>
+  <version>pre-4.2</version>
   <packaging>jar</packaging>
   <name>fme Alfresco Extended Datalists Repo</name>
   <url>http://maven.apache.org</url>
