--- a/fme-alfresco-extdl-share/pom.xml
+++ b/fme-alfresco-extdl-share/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>se.capio.stg.alfresco</groupId>
+  <groupId>de.fme</groupId>
   <artifactId>fme-alfresco-extdl-share</artifactId>
   <parent>
     <artifactId>fme-alfresco-extdl-parent</artifactId>
-    <groupId>se.capio.stg.alfresco</groupId>
-    <version>1.1</version>
+    <version>pre-4.2</version>
+    <groupId>de.fme</groupId>
   </parent>
-  <version>1.2</version>
+  <version>pre-4.2</version>
   <packaging>jar</packaging>
   <name>fme Alfresco Extended Datalists Share</name>
   <url>http://maven.apache.org</url>
