--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>se.capio.stg.alfresco</groupId>
+  <groupId>de.fme</groupId>
   <artifactId>fme-alfresco-extdl-parent</artifactId>
   <packaging>pom</packaging>
   <name>[parent] fme Alfresco Extended Datalists</name>
-  <version>1.1</version>
+  <version>pre-4.2</version>
   <description>
         Parent project for fme Alfresco Extended Datalists
     </description>
