--- a/fme-alfresco-extdl-repo/pom.xml
+++ b/fme-alfresco-extdl-repo/pom.xml
@@ -4,11 +4,10 @@
   <parent>
     <artifactId>fme-alfresco-extdl-parent</artifactId>
     <groupId>de.fme</groupId>
-    <version>pre-4.2</version>
+    <version>pre-4.2-SNAPSHOT</version>
   </parent>
   <groupId>de.fme</groupId>
   <artifactId>fme-alfresco-extdl-repo</artifactId>
-  <version>pre-4.2</version>
   <packaging>jar</packaging>
   <name>fme Alfresco Extended Datalists Repo</name>
   <url>http://maven.apache.org</url>
