--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>fme-alfresco-extdl-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>[parent] fme Alfresco Extended Datalists</name>
-	<version>pre-4.2</version>
+	<version>pre-4.2-SNAPSHOT</version>
 	<description>
         Parent project for fme Alfresco Extended Datalists
     </description>
