#19035 - Updated data list to show deviations subnodes

--- a/fme-alfresco-extdl-share/pom.xml
+++ b/fme-alfresco-extdl-share/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>fme-alfresco-extdl-share</artifactId>
   <parent>
     <artifactId>fme-alfresco-extdl-parent</artifactId>
-    <version>pre-4.2-SNAPSHOT</version>
+    <version>pre-4.2-deviations-SNAPSHOT</version>
     <groupId>de.fme</groupId>
   </parent>
   <packaging>jar</packaging>
