--- a/fme-alfresco-extdl-repo/pom.xml
+++ b/fme-alfresco-extdl-repo/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>fme-alfresco-extdl-parent</artifactId>
     <groupId>de.fme</groupId>
-    <version>pre-4.2-SNAPSHOT</version>
+    <version>pre-4.2-deviations-SNAPSHOT</version>
   </parent>
   <groupId>de.fme</groupId>
   <artifactId>fme-alfresco-extdl-repo</artifactId>
