--- a/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist.properties
+++ b/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist.properties
@@ -14,3 +14,5 @@ form.control.attachments.upload=Upload & attach
 datalist.filter.header=Filter
 filterform.submit=Apply filter
 filterform.save=Save filter
+
+rpdl.newComment=You have an assigned unread comment. 
