--- a/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist.properties
+++ b/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist.properties
@@ -7,6 +7,7 @@ link.display=Show version
 
 #datalist toolbar
 button.export-csv=Export as XLS
+menu.selected-item.exportPdf=Download as PDF
 
 form.attachments.dialog.destination.title=Choose upload destination
 form.control.attachments.upload=Upload & attach
